--- a/selecta/src/index.css
+++ b/selecta/src/index.css
@@ -1,5 +1,9 @@
-body, html {
-    font-family: 'Archivo', sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html {
+    font-family: 'Archivo', 'Open Sans';
     font-style: normal;
     transition: 0.3s;
 }
